viewmodel added, uiState refactored as sealed interface

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">DemoApp</string>
+    <string name="loading">Loading...</string>
+    <string name="retry">Retry</string>
+    <string name="unable_to_load_data">Unable to load data.</string>
+    <string name="comments">comments</string>
 </resources>
